# CCA

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: Release.yml
color-picker/: Cargo.toml
color-picker/src/: common.rs  config.rs  linux.rs  macos.rs  main.rs  windows.rs
macos-color-picker/src/: main.rs
src/: i18n.ts  icc.ts  main.rs  main.ts  settings.css  settings.ts  store.ts  style.css  theme.ts  utils.css  utils.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: color.rs  color_names.rs  config.rs  i18n.rs  icc.rs  lib.rs  macos.rs  main.rs  store.rs
src-tauri/src/picker/: common.rs  macos.rs  mod.rs  windows.rs
src/components/: ProgressBar.ts
src/locales/: en.json  fr.json
