[package]
name = "cca"
version = "0.1.0"
description = "CCA"
authors = ["Cédric Trévisan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cca_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# Cocoa framework bindings for macOS GUI
# Provides NSApplication, NSWindow, NSView, etc.
cocoa = "0.26"

# Objective-C runtime bindings
# Provides msg_send! macro for calling Objective-C methods
objc = "0.2"

# Core Graphics bindings for screen capture
# Provides CGDisplay, CGImage for capturing screen pixels
core-graphics = "0.23"
